--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,10 @@
 // $Id$
 
+Data 6.x x.x xxx, 20xx-xx-xx
+----------------------------
+
+- #688850 k4ml: Fix incompatible PostgreSQL query.
+
 Data 6.x 1.0 Alpha 9, 2009-11-18
 --------------------------------
 
