--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,11 @@
 // $Id$
 
+Data 6.x 1.0 xxxxxxxxxxxxxxxxxxxx
+---------------------------------
+
+- #731530 jmiccolis: Add markup field handler.
+
+
 Data 6.x 1.0 Alpha 10, 2010-01-25
 ---------------------------------
 
