--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,11 +1,16 @@
 // $Id$
 
+Data 6.x xxxxxxxxxxx
+--------------------
+
+- #867590 Use Exceptions. NOTE: this may require you to update modules that use
+  Data's DataTable API.
+
 Data 6.x 1.0 Alpha 11, 2010-03-30
 ---------------------------------
 
 - #731530 jmiccolis: Add markup field handler.
 - Made the data taxonomy form save on blur.
-
 
 Data 6.x 1.0 Alpha 10, 2010-01-25
 ---------------------------------
