#866476 David Goode: Fix notice with CTools 1.7 upgrade.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,10 @@
 // $Id$
 
+Data 6.x 1.0 xxxxxxxxxxxxxxxxxxxx
+---------------------------------
+
+- #866476 David Goode: Fix notice with CTools 1.7 upgrade.
+
 Data 6.x 1.0 Alpha 12, 2010-07-28
 ---------------------------------
 
