#901944 markdorison: Document HTML Fields.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,7 @@
 Data 6.x 1.0 xxxxxxxxxxxxxxxxxxxx
 ---------------------------------
 
+- #901944 markdorison: Document HTML Fields.
 - #922868 jscm, alex_b: Don't allow commas in tag names.
 
 Data 6.x 1.0 Alpha 13, 2010-07-28
